--- a/confess.html
+++ b/confess.html
@@ -144,7 +144,7 @@
             }
 
             const message = {
-                content: `🔔 **Anonymous Message:**\n${messageContent}`,
+                content: `🔔NEW MESSAGE:\n${messageContent}`,
             };
 
             try {
