--- a/message.html
+++ b/message.html
@@ -133,7 +133,7 @@
         const closeConfirmationBtn = document.getElementById("closeConfirmation");
         const messageInput = document.getElementById("message");
 
-        const webhookUrl = "https://discord.com/api/webhooks/1308366015238770688/y6nRwYgtkYv9uXgfwAnGRWnwacl32ijqQbsBxNXYpeCiy5-TU-Womc-Jzbjk2Zii-mm0"; // Replace with your webhook URL
+        const webhookUrl = ""; // Replace with your webhook URL
 
         // Send message to Discord
         sendMessageBtn.addEventListener("click", async function () {
